14-07-06    Email sending returns PEAR errors on fails, this was not checked
            properly
14-07-06    Updates fixed on generated modules
12-06-06    Fixed bug where detect missing perms didn't work on windows installs
            (Marian Seitner)
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
01-08-05    Added a security step in installer (Steven Stremciuc)
01-08-05    Implemented admin GUI for ContentTypeMgr (AJ Tarachanowicz)
30-07-06    A big update to the Polish translation (Thomas Osmialowski)
30-07-06    XML_Parser error avoided by inspecting allow_url_fopen setting
            (Steven Stremciuc)
29-07-06    Extracted execution from SGL_Sql::parseAndExecute(), added ability to
            extract all table names from a schema file
27-07-06    Added possibility to custimise defaults in installer (Eric Persson)
27-07-06    Minimal modules and no sample data are now defaults
27-07-06    Removed dependencies between blocks and sections, you can now install
            blocks only when the relevant module is installed
27-07-06    Rebuilding Seagull can now be done with or without sample data
26-07-06    Moved all navigation from default SQL data to PHP arrays (see
            $module/data/navigation.php)
15-07-06    Enhancements to newsletter module (Rares Benea)
15-07-06    Enhancements to guestbook module (Rares Benea)
14-07-06    Installer description and keywords correctly added to meta tags (getconfused)
14-07-06    Admin screen done for FAQs (Matt Flaherty)
27-06-06    Made post form token optional
27-06-06    SGL_Util::getAllThemes() no longer returns admin themes
23-06-06    Email and username uniqueness enforced on updates (malber)
23-06-06    Upgraded TinyFck to 0.12 (Elijah Insua)
18-06-06    Improved setup wizard: any port can be specified, irrelevant fields
            are disabled
30-05-06    Requiring greater than 8MB memory_limit is enforced